fix datepicker + insert data pribadi clear

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,4 +65,4 @@ hr{
     background-color: #333; /* Modern Browsers */
 
 }
-.ui-helper-clearfix { display:none; }
+/*.ui-helper-clearfix { display:none; }*/
