--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,20 @@
+.navbar-img{
+    background-color:#fff;
+    min-height: 78px;
+    margin-top: 10px;
+    margin-bottom:0px;
+    border:0px;
+}
+.p-custom{
+    color: #F8F8F8;
+}
+.brand-custom{
+    height: 86px;
+    /*padding: 15px 109px;*/
+}
+.no-hand{
+    cursor: default;
+}
 #tes{
     margin-bottom: 3px;
 }
