fix insert profesi and riwayat ajax + fix minor

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,8 @@
 }
 body{
     /*background: #ECECEE;*/
-    height: 1200px;
+    height: auto;
+    margin-bottom: 5em;
 }
 .caret-up {
     width: 0; 
