--- a/public/css/styles_admin.css
+++ b/public/css/styles_admin.css
@@ -6,8 +6,40 @@ Version 1.0
 
 /*Global Styles*/
 
+.table tbody tr > td.success {
+  background-color: #DFF0D8 !important;
+}
+
+.table tbody tr > td.error {
+  background-color: #f2dede !important;
+}
+
+.table tbody tr > td.warning {
+  background-color: #fcf8e3 !important;
+}
+
+.table tbody tr > td.info {
+  background-color: #d9edf7 !important;
+}
+
+.table-hover tbody tr:hover > td.success {
+  background-color: #d0e9c6 !important;
+}
+
+.table-hover tbody tr:hover > td.error {
+  background-color: #ebcccc !important;
+}
+
+.table-hover tbody tr:hover > td.warning {
+  background-color: #faf2cc !important;
+}
+
+.table-hover tbody tr:hover > td.info {
+  background-color: #c4e3f3 !important;
+}
+
 body {
-	background: #f1f4f7;
+	background: #EEEEEE;
 	padding-top: 50px;
 	color: #5f6468;
 }
