add validasi MVC

--- a/public/css/styles_admin.css
+++ b/public/css/styles_admin.css
@@ -5,6 +5,11 @@ Version 1.0
 
 
 /*Global Styles*/
+.checkbox-custom{
+	margin-top: 0px !important;
+	margin-bottom: 0px !important;
+	text-align: center;
+}
 .table th 
 {
     text-align:center !important; 
